configering ingore files/ *.xml and some folders

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,17 @@ mit_arrythmia_dat/234.hea
 results/
 test_model_mtl.py
 train_model_v3_mtl.py
+/colors.scheme.xml
+/markdown.xml
+/editor.codeinsight.xml
+/editor.xml
+/codestyles/
+/jdk.table.xml
+/ide.general.xml
+/updates.xml
+/project.default.xml
+/vcs.xml
+/_mac/
+/github.xml
+/filetypes.xml
+/debugger.xml
