--- a/.gitignore
+++ b/.gitignore
@@ -1,131 +1,102 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Python template
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# C extensions
-*.so
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Generated files
+.idea/**/contentModel.xml
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-# Translations
-*.mo
-*.pot
+# CMake
+cmake-build-*/
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-# Flask stuff:
-instance/
-.webassets-cache
+# File-based project format
+*.iws
 
-# Scrapy stuff:
-.scrapy
+# IntelliJ
+out/
 
-# Sphinx documentation
-docs/_build/
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# PyBuilder
-target/
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Cursive Clojure plugin
+.idea/replstate.xml
 
-# IPython
-profile_default/
-ipython_config.py
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-# pyenv
-.python-version
+# Editor-based Rest Client
+.idea/httpRequests
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
 
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-.idea
+### macOS template
+# General
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 .gitignore
 .idea/ECG-Arrhythmia-Classification.iml
 .idea/misc.xml
@@ -275,11 +246,20 @@ mit_arrythmia_dat/233.hea
 mit_arrythmia_dat/234.atr
 mit_arrythmia_dat/234.dat
 mit_arrythmia_dat/234.hea
+results/.DS_Store
+results/192_128_40eps/proposed_model_False.h5
+results/192_128_class_weight_120eps/proposed_model_False.h5
+results/192_128_class_weight_40eps/proposed_model_False.h5
+results/special_120eps/proposed_model_False.h5
+results/special_div2/proposed_model_False.h5
 test_model_mtl.py
 train_model_v3_mtl.py
-/train_model_paper_validation_remain.py
-/results/192_128_40eps/proposed_model_False.h5
-/results/192_128_class_weight_40eps/proposed_model_False.h5
-/results/192_128_class_weight_120eps/proposed_model_False.h5
-/results/special_120eps/proposed_model_False.h5
-/results/special_div2/proposed_model_False.h5
+/colors.scheme.xml
+/vcs.xml
+/_mac/
+/ignore.xml
+/codestyles/
+/ide.general.xml
+/filetypes.xml
+/debugger.xml
+/dataset_distribution.py
